--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,8 +6,8 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@drawable/icon"
-      android:roundIcon="@drawable/icon"
+      android:icon="@drawable/iconpp"
+      android:roundIcon="@drawable/iconpp"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
