--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@drawable/iconpp"
-      android:roundIcon="@drawable/iconpp"
+      android:roundIcon="@drawable/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <activity
