--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,6 +187,10 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
+    implementation project(':realm')
+
+    compile project(':realm')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
     }
