--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "realm": "^6.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
