--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "native-base": "^2.13.14",
     "react": "16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-native": "0.63.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.33.2",
